[package]
name = "bsdiff-neon"
version = "0.1.0"
description = "A Neon node extension that wraps the Rust bsdiff crate"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsdiff = "0.1.6"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
